--- a/Semana-02/css/style.css
+++ b/Semana-02/css/style.css
@@ -1,3 +1,15 @@
+*{
+    line-height: 1;
+}
+
+header>nav{
+    text-align: right;
+}
+
+footer{
+    text-align: center;
+}
+
 button{
     border: 2px solid red;
     color: red;
