--- a/Semana-02/css/style.css
+++ b/Semana-02/css/style.css
@@ -8,12 +8,31 @@ header{
     width: 75%;
 }
 
+aside a{
+    text-decoration: none;
+    color: #363767;
+    font-size: 20px;
+}
+
 aside{
     background-color: #AACE9B;
+    color: #363767;
     float: left;
-    width: 25%;
+    width: 20%;
     height: 100%;
     position: fixed;
+    padding: 15px;
+    line-height: normal;
+}
+
+aside h2{
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: underline solid #F13312;
+}
+
+aside p{
+    font-size: 14px;
 }
 
 main{
