BaSP-W02-2022:styles added to section 2, section 2  html edited to add styles

--- a/Semana-02/css/style.css
+++ b/Semana-02/css/style.css
@@ -116,7 +116,7 @@ main h2{
 }
 
 .underlined{
-    display: inline;
+    display: inline-block;
     border-bottom: 2px solid #FF3E1D;
 }
 
@@ -134,6 +134,25 @@ main h4{
 main p{
     font-size: 14px;
     color: #363767;
+}
+
+.section-2-img{
+    inline-size: 15%;
+}
+
+.section-2-text{
+    inline-size: 70%;
+}
+
+.section-2 article>div{
+    display: inline-flex;
+}
+
+.section-2 article{
+    display: inline-block;
+    width: 45%;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 footer{
