BaSP-W02-2022: styles added to section 3, section 3 html edited to add styles

--- a/Semana-02/css/style.css
+++ b/Semana-02/css/style.css
@@ -155,6 +155,13 @@ main p{
     padding-bottom: 10px;
 }
 
+.section-3 article{
+    display: inline-block;
+    width: 45%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 footer{
     text-align: center;
     float: right;
