changes in section 4, icons corrected, styles added to icons, buttons styles corrected

--- a/Semana-02/css/style.css
+++ b/Semana-02/css/style.css
@@ -19,6 +19,16 @@ header p{
 header>nav{
     text-align: right;
     inline-size: 50%;
+    padding-right: 10px;
+}
+
+i{
+    font-size: 29px;
+    color: #5d5d5d;
+}
+
+i:hover{
+    color: #F13312;
 }
 
 aside{
@@ -136,6 +146,26 @@ main p{
     color: #363767;
 }
 
+button{
+    border: 1px solid red;
+    border-radius: 3px;
+    color: red;
+    background-color: white;
+    width: 69.5px;
+    height: 33px;
+}
+
+button:hover{
+    border: 2px solid red;
+    background-color: red;
+    color: white;
+}
+
+#button-learn-more{
+    width: 140px;
+    height: 34px;
+}
+
 .section-2-img{
     inline-size: 15%;
 }
@@ -178,18 +208,31 @@ main p{
     margin-bottom: 10px;
 }
 
-#button-1{
-    background-color: #F13312;
+#button-reset{
+    background-color: lightcoral;
     color: #363767;
     border: 1px solid #363767;
     border-radius: 3px;
+    width: 69.5px;
+    height: 33px;
 }
 
-#button-2{
+#button-reset:hover{
+    background-color: #F13312;
+}
+
+#button-send{
     background-color: #AACE9B;
     color: #363767;
     border: 1px solid #363767;
     border-radius: 3px;
+    width: 110px;
+    height: 33px;
+}
+
+#button-send:hover{
+    background-color: #363767;
+    color: white;
 }
 
 .section-6 div{
@@ -219,16 +262,4 @@ footer{
     color: #363767;
     padding-top: 10px;
     padding-bottom: 5px;
-}
-
-button{
-    border: 1px solid red;
-    color: red;
-    background-color: white;
-}
-
-button:hover{
-    border: 2px solid red;
-    background-color: red;
-    color: white;
 }
