--- a/Semana-02/css/style.css
+++ b/Semana-02/css/style.css
@@ -27,7 +27,7 @@ i{
     color: #5d5d5d;
 }
 
-i:hover{
+header i:hover, footer i:hover{
     color: #F13312;
 }
 
@@ -87,6 +87,7 @@ main{
     float: right;
     width: 77%;
     line-height: normal;
+    
 }
 
 section{
@@ -112,7 +113,7 @@ main h1{
     font-weight: bold;
     color: #363767;
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 main h1 li{
@@ -133,6 +134,7 @@ main h3{
 main h2{
     font-size: 14px;
     color: #363767;
+    padding-bottom: 20px;
 }
 
 main h4{
@@ -144,6 +146,12 @@ main h4{
 main p{
     font-size: 14px;
     color: #363767;
+    padding-bottom: 20px;
+}
+
+.fa-solid {
+    font-size: 14px;
+    color: #373867;
 }
 
 button{
@@ -178,14 +186,7 @@ button:hover{
     display: inline-flex;
 }
 
-.section-2 article{
-    display: inline-block;
-    width: 45%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.section-3 article{
+article{
     display: inline-block;
     width: 45%;
     padding-top: 10px;
@@ -206,6 +207,11 @@ button:hover{
 
 .section-4 select{
     margin-bottom: 10px;
+}
+
+#message{
+    padding-bottom: 40px;
+    box-sizing: border-box;
 }
 
 #button-reset{
@@ -235,6 +241,19 @@ button:hover{
     color: white;
 }
 
+.section-5 img{
+    padding: 10px;
+}
+
+.section-5 div p, .section-5 div img{
+    display: inline-flex;
+    width: 30%;
+}
+
+.section-5 div p{
+    vertical-align: top;
+}
+
 .section-6 div{
     display: inline-block;
     width: 30%;
@@ -262,4 +281,8 @@ footer{
     color: #363767;
     padding-top: 10px;
     padding-bottom: 5px;
+}
+
+footer nav{
+    padding-bottom: 10px;
 }
