--- a/Semana-03/css/style.css
+++ b/Semana-03/css/style.css
@@ -1,3 +1,61 @@
+body{
+    display:flex;
+}
+
+h1{
+    font-size: 40px;
+    font-weight: bold;
+    color: #363767; 
+}
+
+h2{
+    font-size: 14px;
+    color: #363767;
+}
+
+h3{
+    font-size: 30px;
+    font-weight: bold;
+    color: #363767;
+}
+
+h4{
+    font-size: 14px;
+    font-weight: bold;
+    color: #373867;
+}
+
+button{
+    border: 1px solid red;
+    border-radius: 3px;
+    color: red;
+    background-color: white;
+    width: 69.5px;
+    height: 33px;
+}
+
+button:hover{
+    border: 2px solid red;
+    background-color: red;
+    color: white;
+}
+
+a{
+    text-decoration: none;
+}
+
+li{
+    list-style-type: none;
+}
+
+body div i, .none-sidebar i{
+    color: #5d5d5d;
+}
+
+body div i:hover, .none-sidebar i:hover{
+    color: #f13312;
+}
+
 /*header{
     display: inline-flex;
     float: right;
