BaSP-W03-2022: styles added to sections 1 and 2

--- a/Semana-03/css/header.css
+++ b/Semana-03/css/header.css
@@ -2,10 +2,11 @@ header{
     padding: 5px;
     display: flex;
     justify-content: space-between;
+    border-bottom: 2px solid #FF3E1D;
 }
 
 header p{
-    font-size: 10px;
+    font-size: 14px;
     color: #373867;
 }
 
