--- a/Semana-03/css/style.css
+++ b/Semana-03/css/style.css
@@ -6,9 +6,9 @@ a{
     text-decoration: none;
 }
 
-li{
+/*li{
     list-style-type: none;
-}
+}*/
 
 body div i, .none-sidebar i{
     color: #5d5d5d;
