--- a/Semana-03/css/main.css
+++ b/Semana-03/css/main.css
@@ -15,7 +15,7 @@ section{
 
 .underlined{
     display: inline-block;
-    padding-bottom: 5px;
+    padding-bottom: 0px;
     border-bottom: 2px solid #FF3E1D;
 }
 
@@ -102,10 +102,11 @@ section{
 @media only screen and (min-width: 480px){  
     .section-1{
         display: flex;
+        justify-content: space-between;
     }
 
     .section-1-1{
-        flex-basis: 53%;
+        flex-basis: 70%;
     }
 
     .section-1-2{
@@ -148,5 +149,6 @@ section{
 
     .section-5-div{
         display: flex;
+        align-items: center;
     }
 }
