BaSP-W03-2022: details corrected

--- a/Semana-03/css/main.css
+++ b/Semana-03/css/main.css
@@ -54,6 +54,10 @@ section{
     color: #373867;
 }
 
+.section-6 a:hover{
+    color: #030572;
+}
+
 #button-learn-more{
     width: 140px;
     height: 33px;
