--- a/Semana-03/css/main.css
+++ b/Semana-03/css/main.css
@@ -1,5 +1,5 @@
 section{
-    border-bottom: 2px solid #373867;
+    border-bottom: 1px solid #373867;
     padding: 5px 0px 5px 0px;
 }
 
@@ -37,9 +37,8 @@ section{
     color: #373867;
 }
 
-.section-4 li{
-    list-style-type: none;
-    padding: 3px 0px 3px 0px;
+.section-4 p{
+    padding: 3px 0px 3px 3px;
 }
 
 .section-5 h3{
