--- a/Semana-03/css/sidebar.css
+++ b/Semana-03/css/sidebar.css
@@ -48,7 +48,7 @@
 }
 
 .more-padding{
-    padding-bottom: 30px;
+    padding-bottom: 50px;
 }
 
 .sidebar img{
@@ -57,6 +57,10 @@
 
 p.line{
     border-bottom: 1px solid #363767;
+}
+
+#top-padding{
+    padding-top: 50px;
 }
 
 @media only screen and (min-width: 1024px){
