BaSP-W05-2022: views added

--- a/Semana-05/views/sign-up.html
+++ b/Semana-05/views/sign-up.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Trackgenix</title>
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/header.css">
-        <link rel="stylesheet" href="css/sidebar.css">
-        <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/header.css">
+        <link rel="stylesheet" href="../css/sidebar.css">
+        <link rel="stylesheet" href="../css/footer.css">
         <script src="https://kit.fontawesome.com/fc16f7a8a7.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -28,10 +28,10 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="">SignUp</a>
+                            <a href="sign-up.html">SignUp</a>
                         </li>
                         <li class="more-padding">
-                            <a href="">LogIn</a>
+                            <a href="log-in.html">LogIn</a>
                         </li>
                     </ul>
                 </nav>
@@ -82,7 +82,97 @@
                 </nav>
             </header>
             <main>
-                
+                <h3>Sign Up</h3>
+                <form>
+                    <div>
+                        <p>
+                            <label>Name</label>
+                        </p>
+                        <p>
+                            <input type="text" placeholder="Name">
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label>Surname</label>
+                        </p>
+                        <p>
+                            <input type="text" placeholder="Surname">
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label>ID number</label>
+                        </p>
+                        <p>
+                            <input type="text" placeholder="ID number">
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label>Birth date</label>
+                        </p>
+                        <p>
+                            <input type="date" placeholder="Birth date">
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label>Phone number</label>
+                        </p>
+                        <p>
+                            <input type="text" placeholder="Phone number">
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label>Address</label>
+                        </p>
+                        <p>
+                            <input type="text" placeholder="Address">
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label>City</label>
+                        </p>
+                        <p>
+                            <input type="text" placeholder="City">
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label>Post code</label>
+                        </p>
+                        <p>
+                            <input type="text" placeholder="Post code">
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label>Email</label>
+                        </p>
+                        <p>
+                            <input type="email" placeholder="Email">
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label>Password</label>
+                        </p>
+                        <p>
+                            <input type="password" placeholder="Password">
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label>Repeat password</label>
+                        </p>
+                        <p>
+                            <input type="password" placeholder="Repeat password">
+                        </p>
+                    </div>
+                </form>
             </main>
             <footer>
                 <nav>
