--- a/Semana-05/views/index.html
+++ b/Semana-05/views/index.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Trackgenix</title>
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/header.css">
-        <link rel="stylesheet" href="css/sidebar.css">
-        <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/header.css">
+        <link rel="stylesheet" href="../css/sidebar.css">
+        <link rel="stylesheet" href="../css/footer.css">
         <script src="https://kit.fontawesome.com/fc16f7a8a7.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -28,10 +28,10 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="">SignUp</a>
+                            <a href="sign-up.html">SignUp</a>
                         </li>
                         <li class="more-padding">
-                            <a href="">LogIn</a>
+                            <a href="log-in.html">LogIn</a>
                         </li>
                     </ul>
                 </nav>
@@ -100,7 +100,7 @@
                         </button>
                     </div>
                     <div class="section-1-2">
-                        <img src="assets/header.png" alt="Computer">
+                        <img src="../assets/header.png" alt="Computer">
                     </div>
                 </section>
                 <section class="section-2">
@@ -111,7 +111,7 @@
                         <article>
                             <div class="section-2-div">
                                 <div class="section-2-img">
-                                    <img src="assets/productivity-booster.png" alt="Productivity" width="50px" height="50px">
+                                    <img src="../assets/productivity-booster.png" alt="Productivity" width="50px" height="50px">
                                 </div>
                                 <div class="section-2-text">
                                     <h4>
@@ -127,7 +127,7 @@
                         <article>
                             <div class="section-2-div">
                                 <div class="section-2-img">
-                                    <img src="assets/work-traceability.png" alt="Work" width="50px" height="50px">
+                                    <img src="../assets/work-traceability.png" alt="Work" width="50px" height="50px">
                                 </div>
                                 <div class="section-2-text">
                                     <h4>
@@ -143,7 +143,7 @@
                         <article>
                             <div class="section-2-div">
                                 <div class="section-2-img">
-                                    <img src="assets/leadership.png" alt="Leadership" width="50px" height="50px">
+                                    <img src="../assets/leadership.png" alt="Leadership" width="50px" height="50px">
                                 </div>
                                 <div class="section-2-text">
                                     <h4>
@@ -159,7 +159,7 @@
                         <article>
                             <div class="section-2-div">
                                 <div class="section-2-img">
-                                    <img src="assets/decision-making.png" alt="Decision" width="50px" height="50px">
+                                    <img src="../assets/decision-making.png" alt="Decision" width="50px" height="50px">
                                 </div>
                                 <div class="section-2-text">
                                     <h4>
@@ -181,7 +181,7 @@
                     <div>
                         <article>
                             <div>
-                                <img src="assets/hours-log.png" alt="Clock">
+                                <img src="../assets/hours-log.png" alt="Clock">
                             </div>
                             <div>
                                 <h4>
@@ -198,7 +198,7 @@
                         </article>
                         <article>
                             <div>
-                                <img src="assets/reports.png" alt="Folders">
+                                <img src="../assets/reports.png" alt="Folders">
                             </div>
                             <div>
                                 <h4>
@@ -215,7 +215,7 @@
                         </article>
                         <article>
                             <div>
-                                <img src="assets/resource-management.png" alt="Board">
+                                <img src="../assets/resource-management.png" alt="Board">
                             </div>
                             <div>
                                 <h4>
@@ -232,7 +232,7 @@
                         </article>
                         <article>
                             <div>
-                                <img src="assets/multiple-roles.png" alt="Team">
+                                <img src="../assets/multiple-roles.png" alt="Team">
                             </div>
                             <div>
                                 <h4>
@@ -324,7 +324,7 @@
                         </h4>
                         <div>
                             <div class="section-5-div">
-                                <img src="assets/something-else-1.png" alt="Image-1">
+                                <img src="../assets/something-else-1.png" alt="Image-1">
                                 <p>
                                     Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
                                     Don't take this text seriously. Explanation here of the correspondant reason. We left this with a random text for the
@@ -339,7 +339,7 @@
                                     moment. This is just an example. Don't take this text seriously. Explanation here of the correspondant reason. We left
                                     this with a random text for the moment. This is just an example. Don't take this text seriously.
                                 </p>
-                                <img src="assets/something-else-2.png" alt="Image-2">
+                                <img src="../assets/something-else-2.png" alt="Image-2">
                             </div>
                         </div>
                     </div>
