--- a/Semana-05/views/log-in.html
+++ b/Semana-05/views/log-in.html
@@ -5,13 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Trackgenix</title>
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/header.css">
-        <link rel="stylesheet" href="css/sidebar.css">
-        <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/header.css">
+        <link rel="stylesheet" href="../css/sidebar.css">
+        <link rel="stylesheet" href="../css/footer.css">
+        <link rel="stylesheet" href="../css/log-in.css">
         <script src="https://kit.fontawesome.com/fc16f7a8a7.js" crossorigin="anonymous"></script>
+        <script src="../javascript/log-in.js"></script>
     </head>
     <body>
         <aside class="none-sidebar">
@@ -28,10 +30,10 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="">SignUp</a>
+                            <a href="sign-up.html">SignUp</a>
                         </li>
                         <li class="more-padding">
-                            <a href="">LogIn</a>
+                            <a href="log-in.html">LogIn</a>
                         </li>
                     </ul>
                 </nav>
@@ -81,31 +83,58 @@
                     </a>
                 </nav>
             </header>
-            <main>
-                
-            </main>
-            <footer>
-                <nav>
-                    <a href="http://www.facebook.com">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                    <a href="http://www.instagram.com">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                    <a href="http://www.twitter.com">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                    <a href="http://www.github.com">
-                        <i class="fa-brands fa-github"></i>
-                    </a>
-                    <a href="http://www.linkedin.com">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                </nav>
-                <p>
-                    Copyright © 2022 GigaTech Software Solutions SA. All rights reserved.
-                </p>
-            </footer>
+            <div id="main-part">
+                <main>
+                    <div>
+                        <h3>
+                            Log In
+                        </h3>
+                        <form>
+                            <div>
+                                <p>
+                                    <label>Email</label>
+                                </p>
+                                <p>
+                                    <input type="text" placeholder="Insert yout email">
+                                </p>
+                            </div>
+                            <div>
+                                <p>
+                                    <label>Password</label>
+                                </p>
+                                <p>
+                                    <input type="password" placeholder="Insert your password">
+                                </p>
+                            </div>
+                        </form>
+                        <button id="button-send">
+                            Send
+                        </button>
+                    </div>
+                </main>
+                <footer>
+                    <nav>
+                        <a href="http://www.facebook.com">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="http://www.instagram.com">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="http://www.twitter.com">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="http://www.github.com">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                        <a href="http://www.linkedin.com">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                    </nav>
+                    <p>
+                        Copyright © 2022 GigaTech Software Solutions SA. All rights reserved.
+                    </p>
+                </footer>
+            </div>
         </div>
     </body>
 </html>
