BaSP-W05-2022: log-in.js updated

--- a/Semana-05/views/log-in.html
+++ b/Semana-05/views/log-in.html
@@ -90,7 +90,7 @@
                             Log In
                         </h3>
                         <form>
-                            <div>
+                            <div id="email">
                                 <p>
                                     <label>Email</label>
                                 </p>
@@ -98,7 +98,7 @@
                                     <input type="text" placeholder="Insert yout email">
                                 </p>
                             </div>
-                            <div>
+                            <div id="password">
                                 <p>
                                     <label>Password</label>
                                 </p>
