BaSP-W05-2022: js files updates, views updated

--- a/Semana-05/views/log-in.html
+++ b/Semana-05/views/log-in.html
@@ -95,7 +95,7 @@
                                     <label>Email</label>
                                 </p>
                                 <p>
-                                    <input type="text" placeholder="Insert yout email">
+                                    <input id="email-input" type="text" placeholder="Insert yout email">
                                 </p>
                             </div>
                             <div id="password">
@@ -103,7 +103,7 @@
                                     <label>Password</label>
                                 </p>
                                 <p>
-                                    <input type="password" placeholder="Insert your password">
+                                    <input id="password-input" type="password" placeholder="Insert your password">
                                 </p>
                             </div>
                         </form>
