--- a/Semana-05/views/sign-up.html
+++ b/Semana-05/views/sign-up.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="../css/sidebar.css">
         <link rel="stylesheet" href="../css/footer.css">
         <script src="https://kit.fontawesome.com/fc16f7a8a7.js" crossorigin="anonymous"></script>
+        <script src="../javascript/sign-up.js"></script>
     </head>
     <body>
         <aside class="none-sidebar">
@@ -84,92 +85,92 @@
             <main>
                 <h3>Sign Up</h3>
                 <form>
-                    <div>
+                    <div id="name">
                         <p>
                             <label>Name</label>
                         </p>
                         <p>
-                            <input type="text" placeholder="Name">
+                            <input id="name-input" type="text" placeholder="Name">
                         </p>
                     </div>
-                    <div>
+                    <div id="surname">
                         <p>
                             <label>Surname</label>
                         </p>
                         <p>
-                            <input type="text" placeholder="Surname">
+                            <input id="surname-input" type="text" placeholder="Surname">
                         </p>
                     </div>
-                    <div>
+                    <div id="ID">
                         <p>
                             <label>ID number</label>
                         </p>
                         <p>
-                            <input type="text" placeholder="ID number">
+                            <input id="ID-input" type="text" placeholder="ID number">
                         </p>
                     </div>
-                    <div>
+                    <div id="birth">
                         <p>
                             <label>Birth date</label>
                         </p>
                         <p>
-                            <input type="date" placeholder="Birth date">
+                            <input id="birth-input" type="date" placeholder="Birth date">
                         </p>
                     </div>
-                    <div>
+                    <div id="phone">
                         <p>
                             <label>Phone number</label>
                         </p>
                         <p>
-                            <input type="text" placeholder="Phone number">
+                            <input id="phone-input" type="text" placeholder="Phone number">
                         </p>
                     </div>
-                    <div>
+                    <div id="address">
                         <p>
                             <label>Address</label>
                         </p>
                         <p>
-                            <input type="text" placeholder="Address">
+                            <input id="address-input" type="text" placeholder="Address">
                         </p>
                     </div>
-                    <div>
+                    <div id="city">
                         <p>
                             <label>City</label>
                         </p>
                         <p>
-                            <input type="text" placeholder="City">
+                            <input id="city-input" type="text" placeholder="City">
                         </p>
                     </div>
-                    <div>
+                    <div id="postcode">
                         <p>
                             <label>Post code</label>
                         </p>
                         <p>
-                            <input type="text" placeholder="Post code">
+                            <input id="postcode-input" type="text" placeholder="Post code">
                         </p>
                     </div>
-                    <div>
+                    <div id="email">
                         <p>
                             <label>Email</label>
                         </p>
                         <p>
-                            <input type="email" placeholder="Email">
+                            <input id="email-input" type="email" placeholder="Email">
                         </p>
                     </div>
-                    <div>
+                    <div id="password">
                         <p>
                             <label>Password</label>
                         </p>
                         <p>
-                            <input type="password" placeholder="Password">
+                            <input id="password-input" type="password" placeholder="Password">
                         </p>
                     </div>
-                    <div>
+                    <div id="password2">
                         <p>
                             <label>Repeat password</label>
                         </p>
                         <p>
-                            <input type="password" placeholder="Repeat password">
+                            <input id="password2-input" type="password" placeholder="Repeat password">
                         </p>
                     </div>
                 </form>
