--- a/Semana-05/views/sign-up.html
+++ b/Semana-05/views/sign-up.html
@@ -174,6 +174,9 @@
                         </p>
                     </div>
                 </form>
+                <button id="button-send">
+                    Send
+                </button>
             </main>
             <footer>
                 <nav>
