--- a/Semana-05/views/sign-up.html
+++ b/Semana-05/views/sign-up.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="../css/header.css">
         <link rel="stylesheet" href="../css/sidebar.css">
         <link rel="stylesheet" href="../css/footer.css">
+        <link rel="stylesheet" href="../css/sign-up.css">
         <script src="https://kit.fontawesome.com/fc16f7a8a7.js" crossorigin="anonymous"></script>
         <script src="../javascript/sign-up.js"></script>
     </head>
@@ -82,124 +83,130 @@
                     </a>
                 </nav>
             </header>
-            <main>
-                <h3>Sign Up</h3>
-                <form>
-                    <div id="name">
-                        <p>
-                            <label>Name</label>
-                        </p>
-                        <p>
-                            <input id="name-input" type="text" placeholder="Name">
-                        </p>
-                    </div>
-                    <div id="surname">
-                        <p>
-                            <label>Surname</label>
-                        </p>
-                        <p>
-                            <input id="surname-input" type="text" placeholder="Surname">
-                        </p>
-                    </div>
-                    <div id="ID">
-                        <p>
-                            <label>ID number</label>
-                        </p>
-                        <p>
-                            <input id="ID-input" type="text" placeholder="ID number">
-                        </p>
-                    </div>
-                    <div id="birth">
-                        <p>
-                            <label>Birth date</label>
-                        </p>
-                        <p>
-                            <input id="birth-input" type="date" placeholder="Birth date">
-                        </p>
-                    </div>
-                    <div id="phone">
-                        <p>
-                            <label>Phone number</label>
-                        </p>
-                        <p>
-                            <input id="phone-input" type="text" placeholder="Phone number">
-                        </p>
-                    </div>
-                    <div id="address">
-                        <p>
-                            <label>Address</label>
-                        </p>
-                        <p>
-                            <input id="address-input" type="text" placeholder="Address">
-                        </p>
-                    </div>
-                    <div id="city">
-                        <p>
-                            <label>City</label>
-                        </p>
-                        <p>
-                            <input id="city-input" type="text" placeholder="City">
-                        </p>
-                    </div>
-                    <div id="postcode">
-                        <p>
-                            <label>Post code</label>
-                        </p>
-                        <p>
-                            <input id="postcode-input" type="text" placeholder="Post code">
-                        </p>
-                    </div>
-                    <div id="email">
-                        <p>
-                            <label>Email</label>
-                        </p>
-                        <p>
-                            <input id="email-input" type="email" placeholder="Email">
-                        </p>
-                    </div>
-                    <div id="password">
-                        <p>
-                            <label>Password</label>
-                        </p>
-                        <p>
-                            <input id="password-input" type="password" placeholder="Password">
-                        </p>
-                    </div>
-                    <div id="password2">
-                        <p>
-                            <label>Repeat password</label>
-                        </p>
-                        <p>
-                            <input id="password2-input" type="password" placeholder="Repeat password">
-                        </p>
-                    </div>
-                </form>
-                <button id="button-send">
-                    Send
-                </button>
-            </main>
-            <footer>
-                <nav>
-                    <a href="http://www.facebook.com">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                    <a href="http://www.instagram.com">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                    <a href="http://www.twitter.com">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                    <a href="http://www.github.com">
-                        <i class="fa-brands fa-github"></i>
-                    </a>
-                    <a href="http://www.linkedin.com">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                </nav>
-                <p>
-                    Copyright © 2022 GigaTech Software Solutions SA. All rights reserved.
-                </p>
-            </footer>
+            <div id="main-part">
+                <main>
+                    <h3>Sign Up</h3>
+                    <form>
+                        <div id="column-1">
+                            <div id="name">
+                                <p>
+                                    <label>Name</label>
+                                </p>
+                                <p>
+                                    <input id="name-input" type="text" placeholder="Name">
+                                </p>
+                            </div>
+                            <div id="surname">
+                                <p>
+                                    <label>Surname</label>
+                                </p>
+                                <p>
+                                    <input id="surname-input" type="text" placeholder="Surname">
+                                </p>
+                            </div>
+                            <div id="ID">
+                                <p>
+                                    <label>ID number</label>
+                                </p>
+                                <p>
+                                    <input id="ID-input" type="text" placeholder="ID number">
+                                </p>
+                            </div>
+                            <div id="birth">
+                                <p>
+                                    <label>Birth date</label>
+                                </p>
+                                <p>
+                                    <input id="birth-input" type="date" placeholder="Birth date">
+                                </p>
+                            </div>
+                            <div id="phone">
+                                <p>
+                                    <label>Phone number</label>
+                                </p>
+                                <p>
+                                    <input id="phone-input" type="text" placeholder="Phone number">
+                                </p>
+                            </div>
+                        </div>
+                        <div id="column-2">
+                            <div id="address">
+                                <p>
+                                    <label>Address</label>
+                                </p>
+                                <p>
+                                    <input id="address-input" type="text" placeholder="Address">
+                                </p>
+                            </div>
+                            <div id="city">
+                                <p>
+                                    <label>City</label>
+                                </p>
+                                <p>
+                                    <input id="city-input" type="text" placeholder="City">
+                                </p>
+                            </div>
+                            <div id="postcode">
+                                <p>
+                                    <label>Post code</label>
+                                </p>
+                                <p>
+                                    <input id="postcode-input" type="text" placeholder="Post code">
+                                </p>
+                            </div>
+                            <div id="email">
+                                <p>
+                                    <label>Email</label>
+                                </p>
+                                <p>
+                                    <input id="email-input" type="email" placeholder="Email">
+                                </p>
+                            </div>
+                            <div id="password">
+                                <p>
+                                    <label>Password</label>
+                                </p>
+                                <p>
+                                    <input id="password-input" type="password" placeholder="Password">
+                                </p>
+                            </div>
+                            <div id="password2">
+                                <p>
+                                    <label>Repeat password</label>
+                                </p>
+                                <p>
+                                    <input id="password2-input" type="password" placeholder="Repeat password">
+                                </p>
+                            </div>
+                        </div>
+                    </form>
+                    <button id="button-send">
+                        Send
+                    </button>
+                </main>
+                <footer>
+                    <nav>
+                        <a href="http://www.facebook.com">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="http://www.instagram.com">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="http://www.twitter.com">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="http://www.github.com">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                        <a href="http://www.linkedin.com">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                    </nav>
+                    <p>
+                        Copyright © 2022 GigaTech Software Solutions SA. All rights reserved.
+                    </p>
+                </footer>
+            </div>
         </div>
     </body>
 </html>
