BaSP-W05-2022: buttons corrected

--- a/Semana-05/views/log-in.html
+++ b/Semana-05/views/log-in.html
@@ -109,7 +109,7 @@
                             </div>
                         </form>
                         <button id="button-send">
-                            Send
+                            Log In
                         </button>
                     </div>
                 </main>
