--- a/Semana-05/views/sign-up.html
+++ b/Semana-05/views/sign-up.html
@@ -181,7 +181,7 @@
                         </div>
                     </form>
                     <button id="button-send">
-                        Send
+                        Sign Up
                     </button>
                 </main>
                 <footer>
