BaSP-W06-2022: corrections made from last week's feedback

--- a/Semana-06/css/sidebar.css
+++ b/Semana-06/css/sidebar.css
@@ -1,8 +1,11 @@
 .none-sidebar{
+    display: flex;
+    flex-direction: column;
     padding: 2px;
 }
 
 .none-sidebar i{
+    padding: 5px;
     color: #5d5d5d;
 }
 
