--- a/Semana-06/views/index.html
+++ b/Semana-06/views/index.html
@@ -15,8 +15,14 @@
     </head>
     <body>
         <aside class="none-sidebar">
-            <a href="">
+            <a href="index.html">
                 <i class="fa-solid fa-bars"></i>
+            </a>
+            <a href="sign-up.html">
+                <i class="fa-solid fa-user-plus"></i>
+            </a>
+            <a href="log-in.html">
+                <i class="fa-solid fa-user"></i>
             </a>
         </aside>
         <aside class="sidebar">
@@ -269,7 +275,7 @@
                                         <label>Email</label>
                                     </p>
                                     <p>
-                                        <input class="form-1" type="email" placeholder="Insert your email">
+                                        <input class="form-1" type="text" placeholder="Insert your email">
                                     </p>
                                 </div>
                             </div>
