--- a/Semana-06/views/log-in.html
+++ b/Semana-06/views/log-in.html
@@ -21,6 +21,12 @@
             <a href="">
                 <i class="fa-solid fa-bars"></i>
             </a>
+            <a href="sign-up.html">
+                <i class="fa-solid fa-user-plus"></i>
+            </a>
+            <a href="log-in.html">
+                <i class="fa-solid fa-user"></i>
+            </a>
         </aside>
         <aside class="sidebar">
             <div>
