--- a/Semana-06/views/sign-up.html
+++ b/Semana-06/views/sign-up.html
@@ -20,6 +20,12 @@
             <a href="">
                 <i class="fa-solid fa-bars"></i>
             </a>
+            <a href="sign-up.html">
+                <i class="fa-solid fa-user-plus"></i>
+            </a>
+            <a href="log-in.html">
+                <i class="fa-solid fa-user"></i>
+            </a>
         </aside>
         <aside class="sidebar">
             <div>
@@ -159,7 +165,7 @@
                                     <label>Email</label>
                                 </p>
                                 <p>
-                                    <input id="email-input" type="email" placeholder="Email">
+                                    <input id="email-input" type="text" placeholder="Email">
                                 </p>
                             </div>
                             <div id="password">
